# modoboa-rspamd

./: .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: plugin.yml
.tx/: config
doc/: conf.py  index.rst  setup.rst
docs/: conf.py  index.rst  setup.rst
modoboa_rspamd/: __init__.py  app_settings.py  apps.py  forms.py  handlers.py  modo_extension.py
modoboa_rspamd/api/v2/: serializers.py
modoboa_rspamd/locale/br/LC_MESSAGES/: django.po
modoboa_rspamd/locale/cs/LC_MESSAGES/: django.po
modoboa_rspamd/locale/de/LC_MESSAGES/: django.po
modoboa_rspamd/locale/el_GR/LC_MESSAGES/: django.po
modoboa_rspamd/locale/es/LC_MESSAGES/: django.po
modoboa_rspamd/locale/fr/LC_MESSAGES/: django.po
modoboa_rspamd/locale/ka/LC_MESSAGES/: django.po
modoboa_rspamd/locale/ru/LC_MESSAGES/: django.po
modoboa_rspamd/locale/sk/LC_MESSAGES/: django.po
modoboa_rspamd/locale/sk_SK/LC_MESSAGES/: django.po
modoboa_rspamd/locale/sv/LC_MESSAGES/: django.po
modoboa_rspamd/locale/tr/LC_MESSAGES/: django.po
modoboa_rspamd/locale/tr_TR/LC_MESSAGES/: django.po
modoboa_rspamd/locale/uk/LC_MESSAGES/: django.po
modoboa_rspamd/management/commands/: manage_rspamd_maps.py
test_project/test_project/: settings.py
