[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "modoboa-rspamd"
dynamic = [
   "version",
   "dependencies"
]
authors = [
  { name="Antoine Nguyen", email="tonio@ngyn.org" },
]
description = "The rspamd frontend of Modoboa"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django :: 4.2",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Communications :: Email",
  "Topic :: Internet :: WWW/HTTP",
]
keywords = ["email"]
license = {file = "LICENSE"}

[project.urls]
homepage = "http://modoboa.org/"
documentation = "https://modoboa-rspamd.readthedocs.io/en/latest/"
repository = "https://github.com/modoboa/modoboa-rspamd"
